[gd_scene load_steps=2 format=2]

[ext_resource path="res://Components/BotDetails/BotDetails.gd" type="Script" id=1]

[node name="BotDetails" type="WindowDialog"]
margin_right = 28.0
margin_bottom = 30.0
rect_min_size = Vector2( 320, 320 )
size_flags_horizontal = 2
size_flags_vertical = 2
resizable = true
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="ItemList" type="ItemList" parent="VBoxContainer"]
margin_right = 300.0
margin_bottom = 9.0
auto_height = true
max_columns = 2
same_column_width = true

[node name="CheckCamFollow" type="CheckButton" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0
text = "Cam Follow"

[node name="CheckShowDebugLines" type="CheckButton" parent="VBoxContainer"]
margin_right = 76.0
margin_bottom = 40.0
text = "Show Debug Lines"

[connection signal="modal_closed" from="." to="." method="_on_BotDetails_modal_closed"]
[connection signal="popup_hide" from="." to="." method="_on_BotDetails_popup_hide"]
[connection signal="toggled" from="VBoxContainer/CheckCamFollow" to="." method="_on_CheckCamFollow_toggled"]
[connection signal="toggled" from="VBoxContainer/CheckShowDebugLines" to="." method="_on_CheckShowDebugLines_toggled"]
